--- a/posts/Dockerfile
+++ b/posts/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:alpine
-RUN sudo addgroup app && adduser -S -G app app
+RUN addgroup app && adduser -S -G app app
 WORKDIR /app
 COPY ./package.json .
 RUN npm install
