--- a/infra/k8s/comments-depl.yaml
+++ b/infra/k8s/comments-depl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: comment-depl
+  name: comments-depl
 spec:
   replicas: 1
   selector:
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: comment-clusterip
+  name: comments-clusterip
 spec:
   selector:
     app: comments
