--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -6,11 +6,19 @@ metadata:
     name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
   - host: mymicroservices.com
     http:
       paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: client-clusterip
+            port:
+              number: 8080
       - pathType: Prefix
         path: "/posts"
         backend:
@@ -19,7 +27,7 @@ spec:
             port: 
               number: 4000
       - pathType: Prefix
-        path: "/posts/:id/comments"
+        path: "/posts/?(.*)/comments"
         backend:
           service:
             name: comments-clusterip
