--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,7 @@
-# deploying react application to nginx server
-FROM nginx:alpine
+FROM node:14.18.1-alpine3.14
 RUN addgroup app && adduser -S -G app app
-WORKDIR /usr/share/nginx/html/
-COPY ./build .
-
-# deploying react application to apache2 server
-# FROM httpd:alpine
-# RUN addgroup app && adduser -S -G app app
-# WORKDIR /usr/local/apache2/htdocs/
-# COPY ./build .
+WORKDIR /app
+COPY ./package.json .
+RUN npm install
+COPY . .
+CMD [ "npm", "start" ]
